# aoc-ocaml

./: aoc.opam  dune-project
lib/: dune  index.ml
lib/y2023/: d1.ml  d1p1.ml  d1p2.ml  d2p1.ml  d2p2.ml  index.ml
lib/y2024/: d1p1.ml  d1p2.ml  d2p1.ml  d2p2.ml  d3p1.ml  d3p2.ml  index.ml
