(lang dune 3.16)

(name aoc)

(generate_opam_files true)

(source
 (github 8uff3r/aoc-ocaml))

(authors "8uff3r")

(maintainers "8uff3r")

(license MIT)

(package
 (name aoc)
 (synopsis "AOC with OCaml")
 (description "AOC with OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
